# STM32L4-RobustRegression-EnergyAnalysis

./: .gitignore  LICENSE  README.md
Python_Data_Generation/data/: DataLength100.csv  DataLength1000.csv  DataLength1000_10.csv  DataLength1000_100.csv  DataLength1000_20.csv  DataLength1000_200.csv  DataLength1000_50.csv  DataLength1000_500.csv  DataLength1000_Gauss.csv  DataLength1000_Gauss1.csv  DataLength1000_Laplace.csv  DataLength1000_Laplace1.csv  DataLength1000_Poisson.csv  DataLength1000_Poisson1.csv  DataLength1000_Uniform.csv  DataLength1000_Uniform1.csv  DataLength100_10.csv  DataLength100_20.csv  DataLength100_Gauss1.csv  DataLength100_Laplace1.csv  DataLength100_Poisson1.csv  DataLength100_Uniform1.csv  DataLength200.csv  DataLength200_10.csv  DataLength200_100.csv  DataLength200_20.csv  DataLength200_50.csv  DataLength500.csv  DataLength500_10.csv  DataLength500_20.csv  DataLength500_50.csv  DataLength_200_100_Gauss.csv  DataLength_200_100_Laplace.csv  DataLength_200_100_Poisson.csv  DataLength_200_100_Uniform.csv  DataLength_200_10_Gauss.csv  DataLength_200_10_Laplace.csv  DataLength_200_10_Poisson.csv  DataLength_200_10_Uniform.csv  DataLength_200_200_Gauss.csv  (+19 more)
Python_Data_Generation/src/: Csv2CppHeaderConverter.py  RegressionResults.py  ScikitDataGeneration.py
STM32_Source_Code/: CMakeLists.txt
STM32_Source_Code/cmake/: gcc-arm-none-eabi.cmake
STM32_Source_Code/inc/: Types.hpp  main.h  startup.h
STM32_Source_Code/inc/algorithms/: HuberEstimator.hpp  OLSEstimator.hpp  Point.hpp  RansacEstimator.hpp  TheilSenEstimator.hpp
STM32_Source_Code/inc/controllers/: AdcPort.hpp  DacPort.hpp  EstimatorResultsLogger.hpp  IUartController.hpp  LPUartController.hpp  Timer100us.hpp  UartController.hpp
STM32_Source_Code/inc/data/: DataLength100.hpp  DataLength1000.hpp  DataLength200.hpp  DataLength500.hpp
STM32_Source_Code/inc/platform/: STM32L476RGTX_FLASH.ld  stm32l4xx_hal_conf.h
STM32_Source_Code/src/: CMakeLists.txt  main.cpp  startup.cpp
STM32_Source_Code/src/algorithms/: CMakeLists.txt
STM32_Source_Code/src/controllers/: AdcPort.cpp  CMakeLists.txt  DacPort.cpp  EstimatorResultsLogger.cpp  LPUartController.cpp  Timer100us.cpp  UartController.cpp
STM32_Source_Code/src/platform/: CMakeLists.txt  stm32l4xx_hal_msp.c
